# sequenceparser

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.md  INSTALL  INSTALL.md  Jamroot  LICENSE.sequenceParser  README  README.md  SConscript  SConstruct  USAGE.md  build-linux-gcc.sh  project-config.jam
app/: Jamfile.v2  main.cpp  performance_test.cpp
examples/: README.md  lsFile.py  lsFolder.py  lsSequence.py  printFile.py  printFolder.py  printSequence.py
include/: Detector.hpp
pyTest/: SConscript  testBrowse.py
python/: sequenceParser.i
src/: CMakeLists.txt  Detector.cpp  Detector.hpp  Detector.i  File.cpp  File.hpp  File.i  FileNumbers.cpp  FileNumbers.hpp  FileObject.cpp  FileObject.hpp  FileObject.i  FileStrings.cpp  FileStrings.hpp  Folder.cpp  Folder.hpp  Folder.i  FrameRange.cpp  FrameRange.hpp  FrameRange.i  Item.cpp  Item.hpp  Item.i  ItemStat.cpp  ItemStat.hpp  ItemStat.i  Jamfile.v2  Sequence.cpp  Sequence.hpp  Sequence.i  Sequence.tcc  SequenceParser.cpp  common.hpp  common.i  commonDefinitions.hpp  commonDefinitions.i  detector.cpp  detector.hpp  detector.i  filesystem.cpp  (+7 more)
src/detail/: FileNumbers.cpp  FileNumbers.hpp  FileStrings.cpp  FileStrings.hpp  analyze.cpp  analyze.hpp
src/sequence/: BrowseItem.cpp  BrowseItem.h  DisplayUtils.cpp  DisplayUtils.h  Item.cpp  Item.h  Jamfile.v2  Range.cpp  Range.h  Sequence.cpp  Sequence.h
src/sequence/parser/: Browser.cpp  Browser.h  BrowserInterfaces.h  Jamfile.v2  ParserUtils.cpp  ParserUtils.h  PatternAggregator.cpp  PatternAggregator.h
src/sequence/parser/impl/: DefaultNumberLocationChooser.cpp  DefaultNumberLocationChooser.h
src/sequenceParser/: FrameRange.cpp  FrameRange.hpp  FrameRange.i  Item.cpp  Item.hpp  Item.i  ItemStat.cpp  ItemStat.hpp  ItemStat.i  Sequence.cpp  Sequence.hpp  Sequence.i  Sequence.tcc  common.hpp  common.i  detector.cpp  detector.hpp  detector.i  filesystem.cpp  filesystem.hpp  filesystem.i  utils.cpp  utils.hpp
src/sequenceParser/detail/: FileNumbers.cpp  FileNumbers.hpp  FileStrings.hpp  analyze.cpp  analyze.hpp
src/test/: CMakeLists.txt  common.hpp
src/test/filesDetection/: filesDetection.cpp
src/test/stringSequenceDetection/: multisequence.cpp  mutiPadding.cpp  negativeSequence.cpp  stringSequenceDetection.cpp
test/: Jamfile.v2  StatLibraryTestMain.java  main.cpp
test/boost/stringSequenceDetection/: main.cpp
test/filesDetection/: Jamfile.v2  SConscript  main.cpp
test/java/: StatLibraryTestMain.java  run_java.sh
test/pyTest/: __init__.py  testBrowse.py  testFileDetection.py  testLink.py  testMultiPadding.py  testMultiSequence.py  testNegativeSequence.py  testStat.py  testStringSequenceDetection.py
test/stringSequenceDetection/: Jamfile.v2  SConscript  main.cpp  multisequence.cpp  mutiPadding.cpp  negativeSequence.cpp
tests/: Jamfile.v2  main.cpp  parser_tests.cpp  sequence_tests.cpp
tools/docker/centos6/: Dockerfile  README.md  build.sh
tools/docker/centos7/: Dockerfile  README.md  build.sh
tools/sconf/: ubuntu_travis.sconf
tools/travis/: build.sh  gcc.generate.coverage.sh  gcc.install.coverage.sh  launch_tests.sh
